[project]
name = "flask-imp"
version = "6.0.3"
description = 'A Flask auto importer that allows your Flask apps to grow big.'
authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    "License :: OSI Approved :: MIT License",
    "Framework :: Flask",
    "Natural Language :: English",
]
requires-python = ">=3.9"
dependencies = [
    'click',
    'Flask',
    'Flask-SQLAlchemy',
    'more-itertools'
]

[dependency-groups]
dev = [
    "flit>=3.12.0",
    "furo>=2025.9.25",
    "mypy>=1.18.2",
    "myst-parser>=3.0.1",
    "pre-commit>=4.3.0",
    "pyqwe>=3.1.1",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "sphinx>=7.4.7",
    "tox>=4.30.3",
    "tox-uv>=1.28.1",
]
docs = [
    "sphinx>=7.4.7",
]
lint = [
    "ruff>=0.14.0",
]
test = [
    "pytest>=8.4.2",
]
typing = [
    "mypy>=1.18.2",
    "pyright>=1.1.406",
]

[project.urls]
Documentation = "https://cheesecake87.github.io/flask-imp/"
Source = "https://github.com/CheeseCake87/flask-imp"

[project.scripts]
flask-imp = "flask_imp._cli:cli"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
    ".github",
    "_assets",
    "app",
    "instance",
    "dist",
    "docs",
    "tests_docker",
    ".gitignore",
    ".env",
    "CONTRIBUTING.md",
]

[tool.mypy]
python_version = "3.9"
files = ["src/flask_imp"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.9"
include = ["src/flask_imp"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.pyqwe]
build = "*:flit build"
install = "*:flit install --symlink"
docs = [
    "*:sphinx-build -E -W -b dirhtml docs docs/_build/dirhtml",
    "*:echo docs: http://localhost:8080/",
    "*(docs/_build/dirhtml):python3 -m http.server 8080"
]
