[metadata]
name = flask-bigapp
version = 1.4.1
description = A Flask auto importer that allows your Flask apps to grow big.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = David Carmichael
keywords = bigapp flask auto importer
url = https://github.com/CheeseCake87/Flask-BigApp
license = GNU General Public License v2 or later (GPLv2+)
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
package_dir =
    =src
packages = flask_bigapp
install_requires =
    Flask
    toml
python_requires = >=3.8

zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
flask_bigapp = py.typed

[flake8]
max-line-length = 160
